# bitmap-designer

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  specs.md
src/bitmap_designer/: __init__.py  __main__.py  app.py  codegen_service.py  constants.py  file_service.py  text_utils.py
src/bitmap_designer/screens/: __init__.py  close_screen.py  close_screens.py  codegen_screen.py  codegen_screens.py  command_bar.py  config_screen.py  config_screens.py  design_screen.py  design_screens.py  info_screen.py  main_screen.py  main_screens.py  manage_screen.py  manage_screens.py  map_screen.py  palette_edit_screen.py  palette_edit_screens.py  popup_screen.py  quit_screen.py  quit_screens.py  save_screen.py  save_screens.py  startup_screens.py
src/bitmap_designer/services/: __init__.py  codegen_service.py  history_service.py  palette_service.py
tests/: conftest.py  test_codegen_service.py  test_file_service.py  test_history_service.py  test_palette_service.py  test_text_utils.py
