[project]
name = "bitmap-designer"
version = "0.1.0"
description = "A text-based utility to design bitmaps and convert them into JS code"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60.0",
    "pyperclip",
]

[project.scripts]
bitmap-designer = "bitmap_designer.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
